<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.jboss.errai.forge</groupId>
  <artifactId>errai-forge-addon</artifactId>
  <version>3.2.3.Final-redhat-1</version>

  <name>Errai::Forge Addon</name>
  <properties>
    <forge.api.version>2.12.3.Final</forge.api.version>
    <version.org.jboss.errai.cdi10-compatible>3.0.6.Final-redhat-1</version.org.jboss.errai.cdi10-compatible>
    <version.org.mvel>2.2.8.Final-redhat-1</version.org.mvel>
    <version.fuse.eap>6.2.1.redhat-084</version.fuse.eap>
    <version.org.kie>6.4.0.Final-redhat-3</version.org.kie>
    <version.org.uberfire>0.8.0.Final-redhat-3</version.org.uberfire>
    <version.org.jboss.as>7.5.7.Final-redhat-3</version.org.jboss.as>
    <version.org.kie.workbench.app>6.3.0.GA</version.org.kie.workbench.app>
    <version.org.jboss.bom.brms>6.3.0.GA-redhat-3</version.org.jboss.bom.brms>
    <version.org.uberfire.ext>0.8.0.Final-redhat-3</version.org.uberfire.ext>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <version.org.dashbuilder>0.4.0.Final-redhat-3</version.org.dashbuilder>
    <version.org.jboss.errai>3.2.3.Final-redhat-1</version.org.jboss.errai>
    <version.commons-configuration>1.6</version.commons-configuration>
    <version.org.jboss.integration-platform>6.0.6.Final-redhat-1</version.org.jboss.integration-platform>
    <jboss.dist.version>7.5.7.Final-redhat-3</jboss.dist.version>
  </properties>

  <url>https://github.com/errai/errai/tree/master/errai-forge-addon</url>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <description>A Forge Addon for configuring Errai projects.</description>

  <developers>
    <developer>
      <name>Max Barkley</name>
    </developer>
    <developer>
      <name>Divya Dadlani</name>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:git@github.com:errai/errai.git</connection>
    <developerConnection>scm:git:git@github.com:errai/errai.git</developerConnection>
    <url>scm:git:git@github.com:errai/errai.git</url>
  </scm>

  <organization>
    <name>JBoss, a division of Red Hat</name>
    <url>http://www.jboss.org</url>
  </organization>

  <issueManagement>
    <system>jira</system>
    <url>http://jira.jboss.org/jira/browse/ERRAI</url>
  </issueManagement>
  
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.jboss.forge</groupId>
        <artifactId>forge-bom</artifactId>
        <type>pom</type>
        <scope>import</scope>
        <version>${forge.api.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <!-- Furnace container -->
    <dependency>
      <groupId>org.jboss.forge.furnace.container</groupId>
      <artifactId>cdi</artifactId>
      <classifier>forge-addon</classifier>
      <scope>provided</scope>
    </dependency>
    <!-- Forge -->
    <dependency>
      <groupId>org.jboss.forge.addon</groupId>
      <artifactId>configuration</artifactId>
      <classifier>forge-addon</classifier>
      <scope>provided</scope>
      </dependency>
    <dependency>
      <groupId>org.jboss.forge.addon</groupId>
      <artifactId>projects</artifactId>
      <classifier>forge-addon</classifier>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.forge.addon</groupId>
      <artifactId>ui</artifactId>
      <classifier>forge-addon</classifier>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.forge.addon</groupId>
      <artifactId>maven</artifactId>
      <!--<version>2.5.0.Final</version>-->
      <classifier>forge-addon</classifier>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.forge.addon</groupId>
      <artifactId>facets</artifactId>
      <classifier>forge-addon</classifier>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.forge.addon</groupId>
      <artifactId>parser-java</artifactId>
      <classifier>forge-addon</classifier>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.forge.addon</groupId>
      <artifactId>resources</artifactId>
      <classifier>forge-addon</classifier>
      <scope>provided</scope>
    </dependency>
    <!-- Forge tests -->
    <dependency>
      <groupId>org.jboss.forge.furnace.test</groupId>
      <artifactId>furnace-test-harness</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.forge.furnace.test</groupId>
      <artifactId>arquillian-furnace-classpath</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.forge.addon</groupId>
      <artifactId>maven-impl-projects</artifactId>
      <version>${forge.api.version}</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>
  <build>
    <finalName>errai-forge-addon</finalName>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.5</version>
        <executions>
          <execution>
            <id>create-forge-addon</id>
            <phase>package</phase>
            <goals>
              <goal>jar</goal>
            </goals>
            <inherited>false</inherited>
            <configuration>
              <classifier>forge-addon</classifier>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>verify</phase>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-clean-plugin</artifactId>
        <version>2.6.1</version>
        <configuration>
          <filesets>
            <fileset>
              <directory>${basedir}</directory>
              <includes>
                <include>target</include>
                <include>war</include>
              </includes>
            </fileset>
          </filesets>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <skipTests>true</skipTests>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>integration-test</id>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.5</version>
            <configuration>
              <skipTests>false</skipTests>
              <argLine>-XX:MaxPermSize=256m</argLine>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
<!--
Modified by POM Manipulation Extension for Maven 1.17 ( SHA: 89482a03 ) 
-->

